JETcompiler/Tests/bad/bad005.myout
Unexpected token: "(" in line 1
